<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.frontend.ui.main.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_completion"
        android:name="com.example.frontend.ui.completion.CompletionFragment"
        android:label="@string/menu_completion"
        tools:layout="@layout/fragment_completion">
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.frontend.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.frontend.ui.graph.GraphFragment"
        android:label="@string/menu_graph"
        tools:layout="@layout/fragment_graph" />
</navigation>