<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/test_fragment"
    tools:context=".ui.depressionTest.DepressionTestFragment" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="214dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/imoticon"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="5dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="우울증 자가진단 테스트"
        android:textColor="#070000"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/explanation"
        android:layout_width="286dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="124dp"
        android:text="@string/test_explain"
        android:textColor="#070000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="353dp"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/explanation"
        tools:ignore="DuplicateIds">


        <LinearLayout
            android:id="@+id/chatLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#CBDBEA"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkList1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/test_item1"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkList2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/test_item2"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkList3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/test_item3"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkList4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/test_item4"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkList5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/test_item5"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkList6"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/test_item6"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkList7"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/test_item7"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkList8"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:text="@string/test_item8"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkList9"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/test_item9"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/resultBtn"
        android:layout_width="106dp"
        android:layout_height="46dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="결과 확인"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>